test/expected/parse_redir_no_filename.out
shit: 2:7: error: Expected a filename after the redir.
     2 |  echo >
       |        ^~ here.
